frontend/src/pages/Platform/Platform.module.scss
// Platform.module.scss
.platformContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-size: 30px;
}

.platform {
  cursor: pointer;
  padding: 20px 10px; // Taller than wide
  height: 350px;
  width: 200px;
  margin: 20px;
  background-color: #fff;
  color: rgb(69, 69, 69);
  border-radius: 10px;
  flex: 1; // Ensure they share available space
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  transition: box-shadow 0.3s, color 0.3s; // Smooth transition for background and text color change
}

.selected {
  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.05);
}

.header {
  display: flex;
  align-self: flex-start;
  font-size: 30px;
}

.icon {
  font-size: 60px; // Or use width and height for SVG icons
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  justify-content: center;
}

.platformText {
  font-weight: 600;
}

// Define specific color schemes for each platform
.facebookColor {
  color: #4267b2; // Facebook's color
}

.twitterColor {
  color: #1da1f2; // Twitter's color
}

.instagramColor {
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  -webkit-background-clip: text;
  color: transparent;
}

.redditColor {
  color: #ff5700; // Reddit's color
}

.snapchatColor {
  color: #fffc00; // Snapchat's color
}

.tiktokColor {
  color: #000000; // TikTok's color
}

